--- a/.screenrc
+++ b/.screenrc
@@ -1,2 +1,12 @@
 defencoding utf-8
 escape ^z^z
+
+vbell off
+autodetach on
+hardstatus alwayslastline I%wI
+#caption always ”%{= wk} %-w%{=bu dr}%n %t%{-}%+w %= %{=b wb}%y/%m/%d(%D) %{=b wb}%c”
+
+bind 2 split
+bind o focus
+bind 1 only
+bind 0 remove
