--- a/.screenrc
+++ b/.screenrc
@@ -4,7 +4,7 @@ escape ^z^z
 vbell off
 autodetach on
 hardstatus alwayslastline I%wI
-scrollback 10000
+defscrollback 50000
 #caption always ”%{= wk} %-w%{=bu dr}%n %t%{-}%+w %= %{=b wb}%y/%m/%d(%D) %{=b wb}%c”
 
 #bind 2 split
