--- a/.gitconfig
+++ b/.gitconfig
@@ -12,4 +12,6 @@
 	status = auto
 	branch = auto
 [core]
-	excludesfile = /home/ryu/.gitignore
+	excludesfile = /home/r_kurain/.gitignore
+[push]
+	default = current
